turmites.lessons.turmites.helloturmite.HelloTurmite.scala.error
Turmite:12: error: type mismatch;
 found   : Unit
 required: Int
			state=nextState(state, c, rule);
                                       ^